--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "file-loader": "6.2.0",
     "prism-react-renderer": "1.2.1",
     "react": "17.0.2",
+    "react-adsense": "^0.1.0",
     "react-dom": "17.0.2",
     "url-loader": "4.1.1"
   },
