--- a/package.json
+++ b/package.json
@@ -1,44 +1,30 @@
 {
-  "name": "hexo-docs",
-  "version": "0.0.0",
-  "private": true,
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "scripts": {
-    "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "dev": "vitepress",
+    "build": "vitepress build",
+    "serve": "vitepress serve",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.20",
-    "@docusaurus/plugin-ideal-image": "2.0.0-beta.20",
-    "@docusaurus/preset-classic": "2.0.0-beta.20",
-    "@docusaurus/theme-search-algolia": "2.0.0-beta.20",
-    "@giscus/react": "1.0.1",
-    "@mdx-js/react": "1.6.22",
-    "@svgr/webpack": "6.2.0",
-    "clsx": "1.1.1",
-    "file-loader": "6.2.0",
-    "prism-react-renderer": "1.2.1",
-    "react": "17.0.2",
-    "react-adsense": "0.1.0",
-    "react-dom": "17.0.2",
-    "url-loader": "4.1.1"
+    "@vue/theme": "^1.0.2",
+    "vitepress": "^0.22.4",
+    "vue": "^3.2.33"
   },
-  "browserslist": {
-    "production": [
-      ">0.5%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/markdown-it": "^12.2.3",
+    "@types/node": "^16.9.1"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "ignoreMissing": [
+        "@algolia/client-search",
+        "react",
+        "react-dom",
+        "@types/react"
+      ]
+    }
   }
 }
