--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@vue/theme": "^1.0.2",
-    "vitepress": "^0.22.4",
+    "vitepress": "v1.0.0-alpha.17",
     "vue": "^3.2.33"
   },
   "devDependencies": {
